react-canvas-draw experimentations

--- a/client/package.json
+++ b/client/package.json
@@ -14,10 +14,12 @@
     "axios": "^0.24.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "image-data-uri": "^2.0.1",
     "multer": "^1.4.4",
     "postcss": "^7.0.39",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
+    "react-canvas-draw": "^1.2.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router": "^6.1.1",
